--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Deploy to s3
 on:
   push:
     branches:
-      - master
+      - main
 jobs:
   build:
     name: Build files
@@ -12,7 +12,7 @@ jobs:
         uses: actions/setup-node@v1
         with: 
             node-version: '10.x'
-      - uses: actions/checkout@master
+      - uses: actions/checkout@main
       - name: Build project files
         run: |
           npm install
