--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "axios": "^0.19.2",
+    "axios": "^0.21.1",
     "core-js": "^3.6.4",
     "jquery": "^3.5.1",
     "node-sass": "^4.14.1",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
+    "vue-i18n": "^8.23.0",
     "vue-multiselect": "^2.1.6",
     "vue-router": "^3.1.6",
     "vue-tables-2": "^2.0.22",
