--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,3 @@
 NODE_ENV=production
 VUE_APP_API_URL=https://test-admin.phila.gov/
+VUE_APP_AIR_TABLES_API=https://api.airtable.com/v0/app6HWoBlToNp1uKQ/Table%201?&view=Grid%20view
