--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
+    "build-staging": "vue-cli-service build --mode staging",
+    "build-test": "vue-cli-service build --mode test",
+    "build-local": "vue-cli-service build --mode local",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
