--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,7 +2,7 @@ name: Deploy to s3
 on:
   push:
     branches:
-      - main
+      - test
 jobs:
   build:
     name: Build files
@@ -16,11 +16,11 @@ jobs:
       - name: Build project files
         run: |
           npm install
-          npm run build-production
+          npm run build-test
       - name: Deploy to s3
         env: 
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws s3 cp dist s3://philagov-vue-apps/embedded/covid-guidance/production/ --recursive # change it
+          aws s3 cp dist s3://philagov-vue-apps/embedded/covid-guidance/test/ --recursive # change it
           
