--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build-production": "vue-cli-service build --mode production",
     "build-staging": "vue-cli-service build --mode staging",
     "build-test": "vue-cli-service build --mode test",
     "build-local": "vue-cli-service build --mode local",
