--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   build:
     name: Build files
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-latest
     steps: 
       - name: Setup node
         uses: actions/setup-node@v1
@@ -21,6 +21,7 @@ jobs:
         env: 
             AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
             AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+            AWS_REGION: us-east-1
         run: |
           aws s3 cp dist s3://philagov-vue-apps/embedded/covid-guidance/staging/ --recursive # change it
           
