--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,5 @@
 NODE_ENV=production
 VUE_APP_API_URL=https://admin.phila.gov/
+VUE_APP_API_GET_POST=https://api.phila.gov/phila/program/archives/
 VUE_APP_AIR_TABLES_API=https://api.airtable.com/v0/app6HWoBlToNp1uKQ/Table%201?&view=Grid%20view
+VUE_APP_TEST_ID=121009
