--- a/.env.test
+++ b/.env.test
@@ -1,3 +1,5 @@
 NODE_ENV=production
 VUE_APP_API_URL=https://test-admin.phila.gov/
+VUE_APP_API_GET_POST=https://test-www.phila.gov/wp-json/programs/v1/archives/
 VUE_APP_AIR_TABLES_API=https://api.airtable.com/v0/app6HWoBlToNp1uKQ/Table%201?&view=Grid%20view
+VUE_APP_TEST_ID=121009
