--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.4",
     "jquery": "^3.5.1",
-    "node-sass": "^4.14.1",
+    "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
     "vue": "^2.6.11",
     "vue-i18n": "^8.23.0",
